Linked the weekly hour total boxes to a corresponding shifts-week page. Linked each calendar day component to a corresponding shifts-day page. Consolidated repetitive CSS styling into a generalized selector for the calendar day shift markers. Applied the new CSS selector class to unmarked calendar days to correct the non-centered dates after linking.

--- a/client/components/shifts/month/shifts-month.css
+++ b/client/components/shifts/month/shifts-month.css
@@ -4,7 +4,6 @@
     padding: 1rem;
     box-sizing: border-box
 }
-
 .calendarBox{
   display: flex;
   justify-content: center; 
@@ -18,7 +17,6 @@
     justify-content: center;
     padding: 0.5rem
 }
-
 .wrapper > div {
     display: flex;
     height: 14vh;
@@ -30,7 +28,6 @@
     align-items: center;
     color: black;
 }
-
 .Title{
   border: 1.5em solid rgba(white, .2);
   display: grid;
@@ -48,18 +45,15 @@
     align-items: center;
     color: black;
 }
-
 .totalHoursColumn{
   flex-direction: column;
   background-color: white;
   padding-top: 0.5rem
 }
-
 .weekTotalWrapper{
   display: flex;
   flex-direction: column
 }
-
 .weekTotal {
     font-size: 2vh;
     display: flex;
@@ -71,7 +65,6 @@
     align-items: center;
     color: black;
 }
-
 .totalHoursForWeek{
   border-radius: 5px;
   height: 14vh;
@@ -90,38 +83,24 @@
   display: inline-block;
   vertical-align: middle;
 }
-
+.calendarDay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 3rem;
+  width: 3rem;
+  border-radius: 50%;
+}
 .posted-shift-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 3rem;
-  width: 3rem;
   background-color: gold;
-  border-radius: 50%;
 }
-
 .scheduled-shift-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 3rem;
-  width: 3rem;
   background-color: lightskyblue;
-  border-radius: 50%;
 }
-
 .both-shift-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 3.5rem;
-  width: 3.5rem;
   background-color: lightskyblue;
   border: 4px solid gold;
-  border-radius: 50%;
 }
-
 .todayMark {
   height: 100%;
   width: 50%;
